[build-system]
requires = ["setuptools"]

[project]
name = "nicole"
version = "2.1.0"
description = "Write lyrics from genius or azlyrics.com into a mp3-tag"
authors = [ 
    { name = "Matthias Quintern", email = "matthias.quintern@posteo.de" }
]
requires-python = ">=3.7"

license = { file = "LICENSE" }
dependencies = [
    "mutagen",
    "beautifulsoup4"
]

classifiers = [
    "Operating System :: POSIX :: Linux",
    "Environment :: Console",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
]

[project.urls]
repository = "https://github.com/MatthiasQuintern/nicole.git"

[project.scripts]
nicole = "nicole.nicole:main"

[tool.setuptools.packages.find]
where = ["."]

